canadensis_dsdl_frontend/tests/compile_fail/truncated_signed_int/canadensis/TruncatedSignedInt.1.0.dsdl

truncated int7 a

@sealed
